# cpp-project-template-draft

./: .gitignore  .travis.yml  README.md  SetupTools.sh
.github/workflows/: cmake.yml
includes/: log.hpp
src/: CMakeLists.txt  main.cpp
src/Log/: Logger.cpp
tests/: CMakeLists.txt
tests/Log/: CMakeLists.txt  LogTest.cpp
tools/: coverage.sh  coverage.sh~  llvm-gcov.sh
